# verible-py

./: setup.cfg
