[metadata]
name = verible_py
version = v0.0-4013
description = Python wrapper around invoking verible (https://chipsalliance.github.io/verible/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chipsalliance/verible
author = Henner Zeller
author_email = h.zeller@acm.org
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4013-gba3dc371/verible-v0.0-4013-gba3dc371-linux-static-x86_64.tar.gz
    sha256 = 2e9b0b985bfca094ee6a11624494bfabd90789d3201e8f8fc40e9cda8b68d24d
    extract = tar
    extract_path = verible-v0.0-4013-gba3dc371/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4013-gba3dc371/verible-v0.0-4013-gba3dc371-linux-static-x86_64.tar.gz
    sha256 = 2e9b0b985bfca094ee6a11624494bfabd90789d3201e8f8fc40e9cda8b68d24d
    extract = tar
    extract_path = verible-v0.0-4013-gba3dc371/bin/verible-verilog-format
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4013-gba3dc371/verible-v0.0-4013-gba3dc371-macOS.tar.gz
    sha256 = b2556a3cffddbf634ff6dd33278b665e768f56f9c9dd130f53dbcb8f2d862f52
    extract = tar
    extract_path = verible-v0.0-4013-gba3dc371-macOS/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4013-gba3dc371/verible-v0.0-4013-gba3dc371-macOS.tar.gz
    sha256 = b2556a3cffddbf634ff6dd33278b665e768f56f9c9dd130f53dbcb8f2d862f52
    extract = tar
    extract_path = verible-v0.0-4013-gba3dc371-macOS/bin/verible-verilog-format
    [verible-verilog-lint.exe]
    group = verible-verilog-lint
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4013-gba3dc371/verible-v0.0-4013-gba3dc371-win64.zip
    sha256 = e3aa0613a23417820eb97113dde85b739e9f1283502f2c20b4f28e546d288137
    extract = zip
    extract_path = verible-v0.0-4013-gba3dc371-win64/verible-verilog-lint.exe
    [verible-verilog-format.exe]
    group = verible-verilog-format
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-4013-gba3dc371/verible-v0.0-4013-gba3dc371-win64.zip
    sha256 = e3aa0613a23417820eb97113dde85b739e9f1283502f2c20b4f28e546d288137
    extract = zip
    extract_path = verible-v0.0-4013-gba3dc371-win64/verible-verilog-format.exe
